--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -1,5 +1,5 @@
 load:
-  input-path: resources/load
+  input-path: src/test/resources/load
 
 
 spring:
@@ -19,7 +19,7 @@ spring:
       ddl-auto: create-drop
     properties:
       hibernate:
-        show_sql: true
+#        show_sql: true
         use_sql_comments: true
         format_sql: true
   batch:
@@ -30,6 +30,6 @@ spring:
   cloud:
     function:
       web:
-        path: /api]
+        path: /api
 server:
   port: 8081
