--- a/compose.yaml
+++ b/compose.yaml
@@ -2,7 +2,7 @@ services:
   postgres:
     image: 'postgres:latest'
     environment:
-      - 'POSTGRES_DB=ms-produto'
+      - 'POSTGRES_DB=ms-product'
       - 'POSTGRES_PASSWORD=secret'
       - 'POSTGRES_USER=root'
     ports:
