--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
         <swagger-annotations.version>2.2.22</swagger-annotations.version>
         <springdoc.version>2.8.4</springdoc.version>
         <spring-cloud.version>2024.0.0</spring-cloud.version>
+        <cucumber.version>7.20.1</cucumber.version>
     </properties>
     <dependencies>
         <!-- springframework -->
@@ -85,6 +86,30 @@
         <dependency>
             <groupId>org.springframework.batch</groupId>
             <artifactId>spring-batch-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite</artifactId>
+            <version>1.9.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-spring</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit-platform-engine</artifactId>
+            <version>${cucumber.version}</version>
             <scope>test</scope>
         </dependency>
         <!-- others -->
@@ -343,7 +368,27 @@
                         <artifactId>gatling-maven-plugin</artifactId>
                         <version>4.11.0</version>
                         <configuration>
-                            <simulationClass>br.com.powerprogramers.product.domain.performance.PerformanceSimulation</simulationClass>
+                            <simulationClass>br.com.powerprogramers.product.performance.PerformanceSimulation
+                            </simulationClass>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>system-test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.1.2</version>
+                        <configuration>
+                            <includes combine.self="override">
+                                <include>**/RunCucumber.java</include>
+                            </includes>
+                            <excludes combine.self="override">
+                            </excludes>
                         </configuration>
                     </plugin>
                 </plugins>
