ajustes para usar o eureka

--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,11 @@
             <artifactId>allure-rest-assured</artifactId>
             <version>2.23.0</version>
         </dependency>
+        <!-- Eureka -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
